--- a/LibroCSharCap5-8/LibroCSharCap5-8.csproj
+++ b/LibroCSharCap5-8/LibroCSharCap5-8.csproj
@@ -70,6 +70,12 @@
     <Compile Include="ejerciciocap8ejer5.Designer.cs">
       <DependentUpon>ejerciciocap8ejer5.cs</DependentUpon>
     </Compile>
+    <Compile Include="EjericiosCap5ejer4.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="EjericiosCap5ejer4.Designer.cs">
+      <DependentUpon>EjericiosCap5ejer4.cs</DependentUpon>
+    </Compile>
     <Compile Include="MainForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -89,6 +95,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="ejerciciocap8ejer5.resx">
       <DependentUpon>ejerciciocap8ejer5.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="EjericiosCap5ejer4.resx">
+      <DependentUpon>EjericiosCap5ejer4.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
