--- a/LibroCSharCap5-8/LibroCSharCap5-8.csproj
+++ b/LibroCSharCap5-8/LibroCSharCap5-8.csproj
@@ -46,28 +46,28 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ejerciciocap7ejer5.cs">
+    <Compile Include="Entidades\cap7\ejerciciocap7ejer5.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="ejerciciocap7ejer5.Designer.cs">
+    <Compile Include="Entidades\cap7\ejerciciocap7ejer5.Designer.cs">
       <DependentUpon>ejerciciocap7ejer5.cs</DependentUpon>
     </Compile>
-    <Compile Include="ejerciciocap8ejer3.cs">
+    <Compile Include="Entidades\cap8\ejerciciocap8ejer3.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="ejerciciocap8ejer3.Designer.cs">
+    <Compile Include="Entidades\cap8\ejerciciocap8ejer3.Designer.cs">
       <DependentUpon>ejerciciocap8ejer3.cs</DependentUpon>
     </Compile>
-    <Compile Include="ejerciciocap8ejer5.cs">
+    <Compile Include="Entidades\cap8\ejerciciocap8ejer5.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="ejerciciocap8ejer5.Designer.cs">
+    <Compile Include="Entidades\cap8\ejerciciocap8ejer5.Designer.cs">
       <DependentUpon>ejerciciocap8ejer5.cs</DependentUpon>
     </Compile>
-    <Compile Include="EjericiosCap5ejer4.cs">
+    <Compile Include="Entidades\cap5\EjericiosCap5ejer4.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="EjericiosCap5ejer4.Designer.cs">
+    <Compile Include="Entidades\cap5\EjericiosCap5ejer4.Designer.cs">
       <DependentUpon>EjericiosCap5ejer4.cs</DependentUpon>
     </Compile>
     <Compile Include="MainForm.cs">
@@ -78,16 +78,16 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <EmbeddedResource Include="ejerciciocap7ejer5.resx">
+    <EmbeddedResource Include="Entidades\cap7\ejerciciocap7ejer5.resx">
       <DependentUpon>ejerciciocap7ejer5.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="ejerciciocap8ejer3.resx">
+    <EmbeddedResource Include="Entidades\cap8\ejerciciocap8ejer3.resx">
       <DependentUpon>ejerciciocap8ejer3.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="ejerciciocap8ejer5.resx">
+    <EmbeddedResource Include="Entidades\cap8\ejerciciocap8ejer5.resx">
       <DependentUpon>ejerciciocap8ejer5.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="EjericiosCap5ejer4.resx">
+    <EmbeddedResource Include="Entidades\cap5\EjericiosCap5ejer4.resx">
       <DependentUpon>EjericiosCap5ejer4.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="MainForm.resx">
@@ -114,6 +114,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Entidades\cap6\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
